project initialized with psql database

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -88,7 +88,7 @@
                href="https://appseed.us" class="text-light"><small>Get Support</small></a>
           </div>
           <div class="col-6 text-right">
-            <a href="{% url 'register' %}" class="text-light"><small>Create Account</small></a>
+            <a href="{% url 'authentication:register' %}" class="text-light"><small>Create Account</small></a>
           </div>
         </div>
       </div>
