--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -114,7 +114,7 @@
                href="https://appseed.us" class="text-light"><small>Get Support</small></a>
           </div>
           <div class="col-6 text-right">
-            <a href="{% url 'login' %}" class="text-light"><small>Authenticate</small></a>
+            <a href="{% url 'authentication:login' %}" class="text-light"><small>Authenticate</small></a>
           </div>
         </div>        
       </div>
