--- a/apps/templates/home/page-403.html
+++ b/apps/templates/home/page-403.html
@@ -40,7 +40,7 @@
                 <br />
                 <br />
                 <p>
-                    Please authenticate - <a href="{% url 'login' %}" >Login</a>
+                    Please authenticate - <a href="{% url 'authentication:login' %}" >Login</a>
                 </p>  
                 
               </div>
