--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -226,7 +226,7 @@
                   <span>Support</span>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a href="{% url 'logout' %}" class="dropdown-item">
+                <a href="{% url 'authentication:logout' %}" class="dropdown-item">
                   <i class="ni ni-user-run"></i>
                   <span>Logout</span>
                 </a>
