--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -268,7 +268,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}" >
+                    <a class="nav-link" href="{% url 'authentication:logout' %}" >
                         <i class="ni ni-user-run text-red"></i>
                         <span class="nav-link-text">Logout</span>
                     </a>
