login page edited

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -8,18 +8,14 @@
 {% block content %}
 
   <!-- Header -->
-  <div class="header bg-gradient-primary py-7 py-lg-8 pt-lg-9">
+  <div class="header bg-gradient-primary py-7 py-lg-8 pt-lg-5">
     <div class="container">
-      <div class="header-body text-center mb-7">
+      <div class="header-body text-center mb-5">
         <div class="row justify-content-center">
           <div class="col-xl-5 col-lg-6 col-md-8 px-5">
             <h1 class="text-white">
-              <a href="https://appseed.us/admin-dashboards/django-dashboard-argon-pro"
-                 target="_blank" rel="noopener noreferrer">Django Dashboard Argon PRO</a>
+              <a href="/" rel="noopener noreferrer">Gestion des Paiements</a>
             </h1>
-            <p class="text-lead text-white">
-              Django Dashboard starter coded with Argon Dashboard PRO UI Kit.  
-            </p>
           </div>
         </div>
       </div>
@@ -35,19 +31,19 @@
     <div class="row justify-content-center">
       <div class="col-lg-5 col-md-7">
         <div class="card bg-secondary border-0 mb-0">
-          <div class="card-header bg-transparent pb-5">
+          <div class="card-header bg-transparent pb-2">
 
-            <h3 class="text-center">
-              Sign in
-            </h3> 
+            <h2 class="text-center">
+              Connexion
+            </h2> 
             <br />
-            <div class="text-muted text-center mt-2 mb-3">
+            <div class="text-muted text-center mt-0 mb-2">
 
               {% if msg %}
                 <span class="text-danger">{{ msg | safe }}</span>
               {% else %}
                 <span>
-                  Add your credentials
+                  Renseignez vos informations.
                 </span>
               {% endif %}
 
@@ -75,20 +71,17 @@
                   {{ form.password }}
                 </div>
               </div>
+              <div class="row  text-center mt-0">
+                <div class="col-12">
+                  <a target="_blank" rel="noopener noreferrer"
+                     href="#" class="text-light"><small><em>Mot de passe oublié ?</em></small></a>
+                </div>
+              </div>
               <div class="text-center">
-                <button type="submit" name="login" class="btn btn-primary my-4">Login</button>
+                <button type="submit" name="login" class="btn btn-primary my-2">Login</button>
               </div>
             </form>
 
-          </div>
-        </div>
-        <div class="row mt-3">
-          <div class="col-6">
-            <a target="_blank" rel="noopener noreferrer"
-               href="https://appseed.us" class="text-light"><small>Get Support</small></a>
-          </div>
-          <div class="col-6 text-right">
-            <a href="{% url 'authentication:register' %}" class="text-light"><small>Create Account</small></a>
           </div>
         </div>
       </div>
