--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -5,17 +5,17 @@
       <div class="row align-items-center justify-content-xl-between">
         <div class="col-xl-6">
           <div class="copyright text-center text-xl-left text-muted">
-            &copy; <a href="https://bit.ly/3fKQZaL" class="font-weight-bold ml-1" 
-                      target="_blank" rel="noopener noreferrer" >Creative Tim</a> 
-            - Coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>.
+            &copy; <a href="#" class="font-weight-bold ml-1" 
+                      target="_blank" rel="noopener noreferrer" >Paiements</a> 
+            - Coded by <a target="_blank" rel="noopener noreferrer" href="#">OD</a>.
           </div>
         </div>
         <div class="col-xl-6">
           <ul class="nav nav-footer justify-content-center justify-content-xl-end">
             <li class="nav-item">
               <a target="_blank" rel="noopener noreferrer" 
-                 href="https://appseed.us/admin-dashboards/django-dashboard-argon-pro" 
-                 class="nav-link text-white" target="_blank">Django Argon Dashboard PRO</a>
+                 href="#" 
+                 class="nav-link text-white" target="_blank">###</a>
             </li>
           </ul>
         </div>
