--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -33,22 +33,12 @@
                 <span class="nav-link-inner--text">Dashboard</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a href="/page-lock.html" class="nav-link">
-                <span class="nav-link-inner--text">Lock</span>
-              </a>
-            </li>
           
           {% else %} 
 
             <li class="nav-item">
               <a href="{% url 'authentication:login' %}" class="nav-link">
                 <span class="nav-link-inner--text">Login</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="{% url 'authentication:register' %}" class="nav-link">
-                <span class="nav-link-inner--text">Register</span>
               </a>
             </li>
 
@@ -59,7 +49,7 @@
         <ul class="navbar-nav align-items-lg-center ml-lg-auto">
           <li class="nav-item">
             <a class="nav-link nav-link-icon" 
-               href="https://www.facebook.com/webappseed" target="_blank" 
+               href="#" target="_blank" 
                data-toggle="tooltip" data-original-title="Like us on Facebook">
               <i class="fab fa-facebook-square"></i>
               <span class="nav-link-inner--text d-lg-none">Facebook</span>
@@ -67,7 +57,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link nav-link-icon" 
-               href="https://twitter.com/webappseed" target="_blank" 
+               href="#" target="_blank" 
                data-toggle="tooltip" data-original-title="Follow us on Twitter">
               <i class="fab fa-twitter-square"></i>
               <span class="nav-link-inner--text d-lg-none">Twitter</span>
@@ -75,20 +65,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link nav-link-icon" 
-               href="https://github.com/app-generator/flask-dashboard-argon-pro" target="_blank" 
+               href="#" target="_blank" 
                data-toggle="tooltip" data-original-title="Star us on Github">
               <i class="fab fa-github"></i>
               <span class="nav-link-inner--text d-lg-none">Github</span>
-            </a>
-          </li>
-          <li class="nav-item d-none d-lg-block ml-lg-4">
-            <a href="https://appseed.us/admin-dashboards/django-dashboard-argon-pro" 
-               target="_blank" rel="noopener noreferrer" 
-               class="btn btn-neutral btn-icon">
-              <span class="btn-inner--icon">
-                <i class="fas fa-shopping-cart mr-2"></i>
-              </span>
-              <span class="nav-link-inner--text">Buy Now</span>
             </a>
           </li>
         </ul>
