--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -147,7 +147,7 @@
                         <span class="sidenav-mini-icon"> M </span>
                         <span class="sidenav-normal"> Multi level </span>
                         </a>
-                        <div class="collapse show" id="navbar-multilevel" style="">
+                        <div class="collapse show" id="navbar-multilevel">
                         <ul class="nav nav-sm flex-column">
                             <li class="nav-item">
                             <a href="#!" class="nav-link ">Third level menu</a>
