--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -14,11 +14,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-  <meta name="author" content="Creative Tim">
+  <meta name="description" content="Paiements Application">
+  <meta name="author" content="OD">
 
   <title>
-    Django Dashboard Argon PRO - {% block title %}{% endblock %} | AppSeed  
+    Paiements - {% block title %}{% endblock %}
   </title>
 
   <!-- Favicon -->
