Paiement app added and some includes files edited

--- a/apps/templates/includes/footer-fullscreen.html
+++ b/apps/templates/includes/footer-fullscreen.html
@@ -5,7 +5,7 @@
       <div class="row align-items-center justify-content-xl-between">
         <div class="col-xl-6">
           <div class="copyright text-center text-xl-left text-muted">
-            &copy; <a href="#" class="font-weight-bold ml-1" 
+            &copy; <a href="/" class="font-weight-bold ml-1" 
                       target="_blank" rel="noopener noreferrer" >Paiements</a> 
             - Coded by <a target="_blank" rel="noopener noreferrer" href="#">OD</a>.
           </div>
