--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -84,15 +84,15 @@
                 <div class="collapse" id="navbar-administration">
                     <ul class="nav nav-sm flex-column">
                         <li class="nav-item">
-                            <a href="/" class="nav-link">
+                            <a href="{% url 'authentication:users' %}" class="nav-link">
                             <span class="sidenav-mini-icon"> U </span>
                             <span class="sidenav-normal"> Utilisateurs </span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Profiles" class="nav-link">
+                            <a href="{% url 'authentication:profiles' %}" class="nav-link">
                             <span class="sidenav-mini-icon"> P </span>
-                            <span class="sidenav-normal"> Profiles </span>
+                            <span class="sidenav-normal"> Profils </span>
                             </a>
                         </li>
                     </ul>
