--- a/apps/templates/accounts/profiles.html
+++ b/apps/templates/accounts/profiles.html
@@ -38,6 +38,53 @@
     <div class="row">
       <div class="col-xl-12">
 
+        {% if messages %}
+          <!-- Alerts -->
+          <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <span class="alert-icon"><i class="ni ni-like-2"></i></span>
+            <span class="alert-text">
+              <strong>Success!</strong>
+              {% for message in messages %}
+                {{ message | safe }}
+              {% endfor %}
+            </span>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        {% endif %}
+
+      <!-- Modal Alerts -->
+      <!-- <div class="modal fade"  id="modal-notification" tabindex="-1" role="dialog" aria-labelledby="modal-notification" aria-hidden="true">
+        <div class="modal-dialog modal-danger modal-dialog-centered modal-" role="document">
+          <div class="modal-content bg-gradient-danger">
+            
+              <div class="modal-header">
+                  <h6 class="modal-title" id="modal-title-notification">Your attention is required</h6>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">×</span>
+                  </button>
+              </div>
+              
+              <div class="modal-body">
+                
+                  <div class="py-3 text-center">
+                      <i class="ni ni-bell-55 ni-3x"></i>
+                      <h4 class="heading mt-4">You should read this!</h4>
+                      <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                  </div>
+                  
+              </div>
+              
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-white">Ok, Got it</button>
+                  <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Close</button>
+              </div>
+              
+          </div>
+        </div>
+      </div> -->
+
         <!-- Table -->
         <div class="row mt-4">
           <div class="col">
@@ -146,4 +193,18 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+  <!-- Optional JS -->
+  <script src="/static/assets/vendor/bootstrap-notify/bootstrap-notify.min.js"></script>
+  
+  <script>
+    setTimeout(function() {
+      $(".alert").alert('close');
+    }, 6000);
+
+    // $('.modal').modal('show')
+    // setTimeout(function() {
+    //   $(".modal").modal('hide');
+    // }, 3000);
+  </script>
+{% endblock javascripts %}
