add user implemented and profil add needs update

--- a/apps/templates/accounts/add-profile.html
+++ b/apps/templates/accounts/add-profile.html
@@ -191,7 +191,7 @@
                       <div class="card-footer">
                         <div class="row justify-content-center">
                             <input type="reset" class="btn btn-secondary" value="Effacer">
-                            <input type="submit" class="btn btn-primary" value="Enregistrer">
+                            <!-- <input type="submit" class="btn btn-primary" value="Enregistrer"> -->
                         </div>
                       </div>
 
