--- a/apps/templates/accounts/add-user.html
+++ b/apps/templates/accounts/add-user.html
@@ -51,7 +51,24 @@
                   </div>
                   <!-- Card body -->
                   {% if ErrorMessage %}
-                    <div class="row"> {{ErrorMessage}} </div>
+                    <!-- Alerts -->
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <span class="alert-icon"><i class="ni ni-like-2"></i></span>
+                        <span class="alert-text">
+                            <strong>Erreur!</strong> {{ErrorMessage}}
+                            <br>
+                            <ul>
+                                {% for field in userform %}
+                                    {% if field.errors %}
+                                        <li> {{field.errors | striptags}} </li>
+                                    {% endif %}
+                                {% endfor %}
+                            </ul>
+                        </span>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                   {% endif %}
                   <div class="card-body">
                     <form role="form" action="{% url 'authentication:add_user' %}" method="post" enctype="multipart/form-data">
@@ -107,6 +124,28 @@
                           </div>
                         </div>
                         <div class="row">
+                            <div class="col-md-6">
+                              <div class="form-group">
+                                <div class="input-group input-group-merge">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                  </div>
+                                  {{ userform.location }}
+                                </div>
+                              </div>
+                            </div>
+                            <div class="col-md-6">
+                              <div class="form-group">
+                                <div class="input-group input-group-merge">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fas fa-globe-americas"></i></span>
+                                  </div>
+                                  {{ userform.agency }}
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        <div class="row">
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
@@ -114,6 +153,16 @@
                                   <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
                                 </div>
                                 {{ userform.job }}
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <div class="input-group input-group-merge">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                </div>
+                                {{ userform.picture }}
                               </div>
                             </div>
                           </div>
@@ -144,4 +193,10 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+    <script>
+        setTimeout(function() {
+            $(".alert").alert('close');
+        }, 3000);
+    </script>
+{% endblock javascripts %}
