add user and profil with user type implemented

--- a/apps/templates/accounts/add-profile.html
+++ b/apps/templates/accounts/add-profile.html
@@ -204,7 +204,17 @@
                                 <div class="input-group-prepend">
                                   <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
                                 </div>
-                                {{ userform.job }}
+                                {{userform.job}}
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <div class="input-group input-group-merge">
+                                <!-- <select name="user-type" hidden>
+                                  <option value="{{default_user_type.id}}" selected>{{default_user_type}}</option>
+                                </select> -->
+                                <!-- <input type="text" class="form-control" name="{{userform.type.name}}" value="{{default_user_type}}"> -->
                               </div>
                             </div>
                           </div>
