--- a/apps/templates/accounts/add-user.html
+++ b/apps/templates/accounts/add-user.html
@@ -124,28 +124,16 @@
                           </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <div class="input-group input-group-merge">
-                                  <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
-                                  </div>
-                                  {{ userform.location }}
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <div class="input-group input-group-merge">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
                                 </div>
-                              </div>
-                            </div>
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <div class="input-group input-group-merge">
-                                  <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fas fa-globe-americas"></i></span>
-                                  </div>
-                                  {{ userform.agency }}
-                                </div>
+                                {{ userform.type }}
                               </div>
                             </div>
                           </div>
-                        <div class="row">
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
@@ -156,6 +144,30 @@
                               </div>
                             </div>
                           </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <div class="input-group input-group-merge">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-credit-card"></i></span>
+                                </div>
+                                {{ userform.location }}
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <div class="input-group input-group-merge">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-globe-americas"></i></span>
+                                </div>
+                                {{ userform.agency }}
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row">
                           <div class="col-md-6">
                             <div class="form-group">
                               <div class="input-group input-group-merge">
