--- a/apps/templates/accounts/add-user.html
+++ b/apps/templates/accounts/add-user.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Ajout Utilisateur {% endblock %}
+{% block title %} Utilisateur {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
