Agency CRUD implemented

--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -95,6 +95,12 @@
                             <span class="sidenav-normal"> Profils </span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href="{% url 'authentication:agencies' %}" class="nav-link">
+                            <span class="sidenav-mini-icon"> A </span>
+                            <span class="sidenav-normal"> Agences </span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 </li>
