add fields to profiles implemented

--- a/apps/templates/accounts/profiles.html
+++ b/apps/templates/accounts/profiles.html
@@ -198,6 +198,12 @@
                                           <i class="ni education_hat mr-2"></i><strong>Contact:</strong> {{profile.contact}}
                                         </div>
                                       </div>
+                                      <div>
+                                        <i class="ni education_hat mr-2"></i><strong>Email:</strong> {{profile.email}}
+                                      </div>
+                                      <div>
+                                        <i class="ni education_hat mr-2"></i><strong>Adresse:</strong> {{profile.adresse}}
+                                      </div>
                                     </div>
                                   </div>
 
