--- a/apps/templates/accounts/edit-profile.html
+++ b/apps/templates/accounts/edit-profile.html
@@ -141,6 +141,28 @@
                             </div>
                           </div>
                         </div>
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <div class="input-group input-group-merge">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="fas fa-align-left"></i></span>
+                                </div>
+                                {{ profileform.adresse }}
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="form-group">
+                              <div class="input-group input-group-merge">
+                                {{ profileform.email }}
+                                <div class="input-group-append">
+                                  <span class="input-group-text"><i class="fas fa-map-marker"></i></span>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </fieldset>
                       <div class="card-footer">
                         <div class="row justify-content-center">
